--- a/.htaccess
+++ b/.htaccess
@@ -17,7 +17,10 @@ RewriteEngine On
 RewriteRule ^Accueil$ index.php [L]
 RewriteRule ^Connexion$ connexion.php [L]
 RewriteRule ^Inscription$ inscription.php [L]
+RewriteRule ^Confirmation$ confirmation.php [L]
 RewriteRule ^Moncompte$ account.php [L]
+RewriteRule ^Rendez-vous$ rdv.php [L]
+RewriteRule ^Confirmation$ confirmation.php [L]
 RewriteRule ^Déconnexion$ logout.php [L]
 
 
